# today-s_news_reporter_agent

./: .gitignore  README.md  bot.py  bot_prompt.md  env.py  main.py  news_crew.py  pyproject.toml  tdd.py  tdd_prompt.md  tool.py
output/: final_news_briefing.md  global_news.json  korean_news.json
